# agent-wiki

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  Makefile  README.md  SKILL.md  backlog.md  feature_list.json  install.sh  package.json  progress.txt  pyproject.toml
.claude/: settings.json
.cursor/rules/: agent-wiki.mdc
.github/workflows/: benchmarks.yml  ci.yml  publish.yml
adapters/claude/: CLAUDE.md
adapters/codex/: AGENTS.md
adapters/cursor/: AGENTS.md
adapters/hermes/: SKILL.md
atlas/: __init__.py  cli.py  hooks.py  install.py  migrate.py
atlas/core/: __init__.py  analyzer.py  cache.py  graph.py  ingest.py  linker.py  models.py  query.py  registry.py  scanner.py  scanner_ast.py  scanner_semantic.py  storage.py  wiki.py
atlas/dashboard/: app.js  audit.js  explorer.js  graph.js  index.html  search.js  styles.css  timeline.js  welcome.js  wiki.js
atlas/server/: __init__.py  app.py  deps.py  mcp.py  middleware.py  schemas.py  ws.py
benchmarks/: run_all.py
benchmarks/results/: latest.json
cli/: wikictl
contract/: manifest.yaml
docs/: VISION.md  tool-configs.md  usage.md  vault-organization.md
docs/examples/: analysis-dossier.md  business-operations.md  origin-labs.conf.example  research-project.md  (+1 more)
mcp/: README.md  server.mjs
outputs/: README.md
raw/: README.md
scripts/: bootstrap-local.sh  verify.sh
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_hooks.py  test_install.py  test_integration.py  test_migrate.py  test_skills.py
tools/: package.json  verify.sh  wikictl
wiki/: index.md  log.md
(+99 files in other folders)
