[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-ai"
version = "2.0.0a1"
description = "Knowledge engine for AI agents — scan anything, know everything, remember forever."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Origin Labs", email = "hello@originlabs.dev" }]
keywords = ["knowledge-graph", "wiki", "agents", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "networkx>=3.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ast = ["tree-sitter>=0.22", "tree-sitter-python>=0.23", "tree-sitter-javascript>=0.23", "tree-sitter-typescript>=0.23", "tree-sitter-go>=0.23", "tree-sitter-rust>=0.23"]
cluster = ["graspologic>=3.4"]
server = ["fastapi>=0.115", "uvicorn>=0.32"]
all = ["atlas-ai[ast,cluster,server]"]
dev = ["atlas-ai[all]", "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8"]

[project.scripts]
atlas = "atlas.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.ruff]
target-version = "py312"
line-length = 120
